# 02689-AdvancedNumericalAlgorithmP3

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config.ini  pyproject.toml  setup.sh
Experiments/: GALLERY_HEADER.rst
Experiments/FV-Solver/: README.md  compute_LDC.py  plot_LDC.py  test_fv_solver.py
Experiments/Meshing/: README.md  compute_meshes.py  experiments.yaml  plot_meshes.py
data/FV-Solver/: LDC_Re100.h5
data/validation/ghia/: ghia_Re10000_u_centerline.csv  ghia_Re10000_v_centerline.csv  ghia_Re1000_u_centerline.csv  ghia_Re1000_v_centerline.csv  ghia_Re100_u_centerline.csv  ghia_Re100_v_centerline.csv  (+8 more)
docs/: plotting_design.md  project_overview.md  quickstart.md
docs/source/: api_reference.rst  conf.py
examples/: convergence_study.py  poisson_example.py
scripts/: export_ghia_data.py
src/: REFACTORING_SUMMARY.md  __init__.py
src/NaviFlow/: .gitignore
src/algorithms/: __init__.py  mesh.py  solvers.py  utils.py
src/fv/: __init__.py
src/ldc/: __init__.py  base_solver.py  datastructures.py  fv_solver.py  spectral_solver.py
src/meshing/: __init__.py  experiments.yaml  generate_meshes.py  mesh_loader.py  mesh_loader.py.bak  simple_structured.py  structured_inmemory.py  structured_uniform.py  visualize_meshes.py
src/tests_naviflow/: test_mesh.py  test_momentum_assembly.py  test_pressure.py
src/utils/: __init__.py  data_io.py  datatools.py  ghia_validator.py  ldc_plotter.py  plotting.py
src/validation/: README.md  __init__.py  ghia_benchmark.py
tests/: test_mesh.py  test_multirun_plotter.py  test_solvers.py
(+47 files in other folders)
